[package]
name = "Anzen_dono"
version = "0.1.0"
authors = ["Yash Yadav <yash2yk2@gmail.com>"]
edition = "2021"
description = "A secure CLI tool for managing and adding encryption on Solana keypairs"
repository = "https://github.com/YASH-YADAV-dynamo/Anzen_chan"
license = "MIT"

[dependencies]
solana-sdk = "1.17"
clap = { version = "4.0", features = ["derive"] }
aes = "0.8"
rpassword = "5.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctr = "0.9"

[[bin]]
name = "anzen_chan"
path = "src/main.rs"